--- a/package.json
+++ b/package.json
@@ -10,15 +10,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/crossclassify/xc-sdk-react.git"
-  },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/crossclassify/xc-sdk-react/issues"
-  },
-  "homepage": "https://github.com/crossclassify/xc-sdk-react#readme"
+  "author": ""
 }
